--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,14 @@
 <h1>Make your form here</h1>
+<form method="POST" action="/pirates">
+
+Pirate's name<input type="text" name="pirate[name]" ><br>
+Pirate's weight<input type="text" name="pirate[weight]" ><br>
+Pirate's height<input type="text" name="pirate[height]" ><br>
+Ship's name<input id="ship_name_1" type="text" name="pirate[ships][][name]" ><br>
+Ship's type<input id="ship_type_1"type="text" name="pirate[ships][][type]" ><br>
+Ship's booty<input id="ship_booty_1" type="text" name="pirate[ships][][booty]" ><br>
+Ship's name<input id="ship_name_2"" type="text" name="pirate[ships][][name]" ><br>
+Ship's type<input id="ship_type_2"" type="text" name="pirate[ships][][type]" ><br>
+Ship's booty<input id="ship_booty_2" type="text" name="pirate[ships][][booty]" ><br>
+<input id="Submit" type="submit" value="submit">
+</form>
