--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,15 @@
 <h1>Make your form here</h1>
+
+<form action="/pirates" method="post">
+    <label>Pirate Name: <input type="text" name="pirate[name]"></label><br>
+    <label>Pirate Weight: <input type="text" name="pirate[weight]"></label><br>
+    <label>Pirate Height: <input type="text" name="pirate[height]"></label><br>
+    <label>Ship Name: <input type="text" name="pirate[ships][][name]" id="ship_name_1"></label><br>
+    <label>Ship Type: <input type="text" name="pirate[ships][][type]" id="ship_type_1"></label><br>
+    <label>Ship Booty: <input type="text" name="pirate[ships][][booty]" id="ship_booty_1"></label><br>
+    <label>Ship 2 Name: <input type="text" name="pirate[ships][][name]" id="ship_name_2"></label><br>
+    <label>Ship 2 Type: <input type="text" name="pirate[ships][][type]" id="ship_type_2"></label><br>
+    <label>Ship 2 Booty: <input type="text" name="pirate[ships][][booty]" id="ship_booty_2"></label><br>
+
+    <input type="submit" id="Submit">
+</form>
