--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,14 @@
-<h1>Display your Pirate here</h1>
+<h1>Pirates</h1><br>
+    <h4>Name: <%= @pirate.name%></h4><br>
+    <h4>Weight: <%= @pirate.weight%></h4><br>
+    <h4>Height: <%= @pirate.height%></h4><br>
 
 
-<h2>Display your first ship here</h2>
+<h1>Ships</h1><br>
+<% @ships.each do |ship|%>
+    <h4>Name: <%= ship.name%></h4><br>
+    <h4>Type: <%= ship.type%></h4><br>
+    <h4>Booty: <%= ship.booty%></h4><br>
+<% end%>
 
 
-<h2>Display your second ship here</h2>
