--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,14 @@
-<h1>Display your Pirate here</h1>
+<h1>Pirate Details</h1>
+    <h3>Name: <%= @pirate[:name] %></h3>
+    <h3>Weight: <%= @pirate[:weight] %></h3>
+    <h3>Height: <%= @pirate[:height] %></h3>
 
+<h2>Ship 1 Details</h2>
+    <h3>Name: <%= @ship1[:name] %></h3>
+    <h3>Weight: <%= @ship1[:type] %></h3>
+    <h3>Height: <%= @ship1[:booty] %></h3>
 
-<h2>Display your first ship here</h2>
-
-
-<h2>Display your second ship here</h2>
+<h2>Ship 2 Details</h2>
+    <h3>Name: <%= @ship2[:name] %></h3>
+    <h3>Weight: <%= @ship2[:type] %></h3>
+    <h3>Height: <%= @ship2[:booty] %></h3>
